# atlas

./: .clang-format  .cursorignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  readme.md
python/atlas_agent/: README.md  pyproject.toml
python/atlas_agent/src/atlas_agent/: capabilities_prompt.py  chat_rpc_team.py  cli.py  codegen_policy.py  console_ui.py  defaults.py  exporter.py  gateway_model.py  llm_docs.py  model_policy.py  provider_tool_schema.py  responses_tool_loop.py  scene_rpc.py  session_resume.py  session_store.py
python/atlas_agent/tests/: test_animation_batch_verification.py  test_animation_camera_solve_and_apply_dolly_requires_dist.py  test_animation_camera_solve_and_apply_orbit_contract.py  test_animation_replace_key_camera_switch_guardrail.py  test_camera_director_templates.py  test_exporter_frame_ranges.py  test_fs_hint_resolve.py  test_gateway_model_matching.py  test_llm_client_gateway_model_retry.py  test_llm_client_model_limits.py  test_llm_client_responses_compact.py  test_model_policy.py  test_no_fake_user_messages.py  test_provider_schema_arrays_have_items.py  test_provider_schema_camera_typed_value_accepts_string.py  test_responses_tool_loop.py  test_responses_tools_shape.py  test_session_resume_reasoning_summary.py  test_subprocess_utils_output.py  test_token_estimation_images.py  test_tool_loop_ephemeral_images.py  test_tool_schema_handler_sync.py  test_tools_agent.py
python/zimg/: CMakeLists.txt  README.md  pyproject.toml
python/zimg/src/zimg/: __init__.py  bioformats.py  neutube_json.py
src/atlas/: CMakeLists.txt  LogDialog.qrc  LogDialog.ui  VULKAN_MIGRATION_PLAN.md  atlas.pro  atlas.qrc  deploy_qt_for_atlas  img.pri  img.pro  main.cpp  neuroglancer_precomputed_examples.json  readme_vulkan_migration.md  settings_flagfile.txt  z2danimation.cpp  z2danimation.h  z2danimationdoc.cpp  z2danimationdoc.h  z2dtransformparameter.cpp  z2dtransformparameter.h  z3danimation.cpp  z3danimation.h  z3danimationdoc.cpp  z3danimationdoc.h  z3danimationfilter.cpp  z3danimationfilter.h  z3danimationview.cpp  z3danimationview.h  z3darrowrenderer.cpp  z3darrowrenderer.h  z3daxisfilter.cpp  z3daxisfilter.h  z3dbackgroundrenderer.cpp  z3dbackgroundrenderer.h  z3dblockcache.h  z3dblockidcollector.cpp  z3dblockidcollector.h  z3dboundedfilter.cpp  z3dboundedfilter.h  z3dcamera.cpp  z3dcamera.h  (+814 more)
src/atlas/Resources/: Info.plist.in
src/atlas/Resources/fonts/: segoeui.ttf_sdf.txt
src/atlas/Resources/json/: command_config.json  skeletonize.json  trace_config.json
src/atlas/Resources/ontology/: lemur_atlas_ontology_v3.json  lemur_atlas_ontology_v5.json
src/atlas/Resources/shader/: Fxaa3_11.frag  almag.frag  almag.vert  almag_func.frag  background.frag  blur.frag  common.frag  compositor.frag  cone.frag  cone.vert  cone_2.vert  cone_func.frag  cone_func_2.frag  copy_raycaster_image.frag  dual_peeling_blend.frag  dual_peeling_final.frag  dual_peeling_init.frag  dual_peeling_peel.frag  ellipsoid.frag  ellipsoid.vert  ellipsoid_func.frag  glow.frag  glow_func.frag  line.frag  (+39 more)
src/atlas/icons/: atlas_version.rc.in
src/img/: CMakeLists.txt  NEUTUBE2_MIGRATION.md  NaturalSplineCurve.h  bresenham.c  img.pro  zabslflagtypes.h  zaffine2d.cpp  zaffine2d.h  zaffine3d.cpp  zaffine3d.h  zarrayfilters.cpp  zarrayfilters.h  zassignpuncta.cpp  zassignpuncta.h  zbbox.h  zbenchtimer.cpp  zbenchtimer.h  zbinarizeimage.cpp  zbinarizeimage.h  zbioformatsbridgeclient.cpp  zbioformatsbridgeclient.h  zbitset.h  zblockedautotracebounds.h  zblockedautotracesession.cpp  zblockedautotracesession.h  zcachedimg.cpp  zcachedimg.h  zcancellation.h  zchromaticshiftcorrection.cpp  zchromaticshiftcorrection.h  zcommandlineflags.cpp  zcommandlineflags.h  zcompleximg.cpp  zcompleximg.h  zconcurrentlrucache.h  zconcurrentlrucache2.h  zcpuinfo.cpp  zcpuinfo.h  zeigenutils.cpp  zeigenutils.h  (+391 more)
src/matlab/: CMakeLists.txt  correct_czi_shading_mex.cpp  read_puncta_mex.cpp  read_stack_info_mex.cpp  read_stack_mex.cpp  stack_czi_tiles_mex.cpp  stack_czi_tiles_with_mask_mex.cpp
src/neurolabi/c/: CMakeLists.txt  GenerateGraspTxtFiles.sh  c_lib.includes  parse_template.cmake  test_temporary.c  tz_geo3d_ball.h  tz_json.c  tz_local_neuroseg.c  tz_locseg_chain.c  tz_locseg_chain_exp.h  tz_math_lib.h  tz_matrix.c.t  tz_mc_stack.h  tz_objdef.h  tz_object_3d.h  tz_string_defs.h  tz_trace_utils.c
src/neurolabi/gui/: CMakeLists.txt  CMakeLists_qt.txt  c_json.cpp  c_stack.cpp  neutubeconfig.cpp  swctreenode.cpp  vis3d.pri  zdocplayer.h  zfiletype.cpp  zgraph.cpp  zhdf5reader.cpp  zhdf5writer.cpp  zjsonarray.h  zjsonobject.cpp  zjsonobject.h  zjsonparser.cpp  zlocalneuroseg.cpp  zlocsegchain.cpp  zlocsegchain.h  zmatrix.cpp  zmatrix.h  zneurontracer.cpp  zobject3d.cpp  zobject3d.h  zobject3dscan.cpp  zobject3dscan.hpp  zobject3dscanarray.h  zobject3dstripe.cpp  zpainter.h  zqtheader.h  zrunneutucommand.cpp  zrunneutucommand.h  zsinglechannelstack.h  zstack.cxx  zstackfactory.cpp  zstackfactory.h  zstackfile.cpp  zstackfile.h  zstackobject.cpp  zstackreader.cpp  (+8 more)
src/neutube/: CMakeLists.txt  NEUTUBE2_MIGRATION.md  README.md  zimgstackinterface.cpp  zimgstackinterface.h  zneutube3dgeom.cpp  zneutube3dgeom.h  zneutubeautotraceprocess.cpp  zneutubecompareswc.cpp  zneutubecompareswc.h  zneutubecontfun.h  zneutubedarraymath.cpp  zneutubedarraymath.h  zneutubedarrayqsort.cpp  zneutubedarrayqsort.h  zneutubeedt3d.cpp  zneutubeedt3d.h  zneutubefieldrange.h  zneutubegeneral.cpp  zneutubegeneral.h  zneutubegeo3dcircle.h  zneutubegeo3dellipse.cpp  zneutubegeo3dellipse.h  zneutubegeo3dpointarray.cpp  zneutubegeo3dpointarray.h  zneutubegeo3dscalarfield.cpp  zneutubegeo3dscalarfield.h  zneutubegeo3dutils.cpp  zneutubegeo3dutils.h  zneutubegraph.cpp  zneutubegraph.h  zneutubeimgbinarizer.cpp  zneutubeimgbinarizer.h  zneutubeimgbwmorph.cpp  zneutubeimgbwmorph.h  zneutubeimglocmax.cpp  zneutubeimglocmax.h  zneutubeimgsampling.cpp  zneutubeimgsampling.h  zneutubeinthistogram.cpp  (+117 more)
src/python/: CMakeLists.txt  __init__.py  img.py  imgpy.cpp  ndarray_utils.h  typecast.h
(+520 files in other folders)
