[build-system]
requires = [
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "zimg"
version = "0.0.0"
description = "Python bindings for Atlas zimg (nanobind)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Feng Lab"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/feng-lab/atlas"

[tool.scikit-build]
wheel.packages = ["src/zimg"]
build.verbose = true
cmake.version = ">=3.24"
wheel.py-api = "cp312"
