[build-system]
requires = [
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "zimg"
version = "0.0.0"
description = "Python bindings for Atlas zimg (nanobind)"
readme = "README.md"
# Runtime floor for the abi3 wheel.
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
]
license = {text = "Apache-2.0"}
authors = [{name = "Feng Lab"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/feng-lab/atlas"

[tool.scikit-build]
wheel.packages = ["src/zimg"]
build.verbose = true
cmake.version = ">=3.26"
ninja.make-fallback = false
# Keep the Stable ABI floor pinned even when built with a newer CPython.
wheel.py-api = "cp312"
